--- a/omnifood/src/css/style.css
+++ b/omnifood/src/css/style.css
@@ -1,3 +1,7 @@
+/* ------------------------------------ */
+/* basic setup */
+/* ------------------------------------ */
+
 * {
     margin: 0;
     padding: 0;
@@ -12,7 +16,9 @@ html {
     font-weight: 300;
     text-rendering: optimizeLegibility;
 }
-
+/* ------------------------------------------- */
+/*   -------------  header ------------------- */
+/* -------------------------------------------- */
 .row {
     max-width: 1140px;
     margin: 0 auto;
@@ -26,7 +32,14 @@ header {
 }
 
 h1 {
-    margin: 0;
+    margin-top: 0;
+    margin-bottom: 20px;
+    color: #fff;
+    font-size: 240%;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    word-spacing: 4px;
 }
 
 .hero-text-box {
@@ -35,4 +48,76 @@ h1 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+/* ------------------------------------ */
+/* buttons */
+/* ------------------------------------ */
+
+.btn:link,
+.btn:visited {
+    display: inline-block;
+    padding: 10px 30px;
+    font-weight: 300;
+    text-decoration: none;
+    border-radius: 200px;
+    transition: background-color 0.2s, border 0.2s, color 0.2s;
+}
+
+.btn:hover,
+.btn:active {
+    background-color: #cf6d17;
+}
+
+.btn-full {
+    border: 1px solid #e67e22;
+    background-color: #e67e22;
+    color: #fff;
+}
+
+.btn-ghost {
+    border: 1px solid #e67e22;
+    color: #e67e22;
+}
+
+.btn-ghost:hover,
+.btn-ghost:active {
+    color: #fff;
+    border: 1px solid #cf6d17;
+}
+
+/* ------------------------------------ */
+/* headers */
+/* ------------------------------------ */
+
+.logo {
+    height: 100px;
+    width: auto;
+    float: left;
+    margin-top: 20px;
+}
+
+.main-nav {
+    float: right;
+    list-style: none;
+    margin-top: 55px;
+}
+
+.main-nav li {
+    display: inline-block;
+    margin-left: 40px;
+}
+
+.main-nav li a {
+    padding: 8px 0;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 90%;
+    border-bottom: 2px solid transparent;
+    transition: border-bottom 0.2s;
+}
+
+.main-nav li a:hover {
+    border-bottom: 2px solid #e67e22;
 }
