--- a/omnifood/src/css/style.css
+++ b/omnifood/src/css/style.css
@@ -24,6 +24,10 @@ html {
     margin: 0 auto;
 }
 
+section {
+    padding: 50px 0;
+}
+
 header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/hero.jpg);
     background-size: cover;
@@ -31,16 +35,60 @@ header {
     height: 100vh;
 }
 
+h1,
+h2,
+h3 {
+    font-weight: 300;
+    text-transform: uppercase;
+}
+
 h1 {
+    letter-spacing: 1px;
+
     margin-top: 0;
     margin-bottom: 20px;
     color: #fff;
     font-size: 240%;
-    font-weight: 300;
-    text-transform: uppercase;
-    letter-spacing: 1px;
     word-spacing: 4px;
 }
+
+h2 {
+    letter-spacing: 1px;
+
+    font-size: 110%;
+    word-spacing: 2px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+h2::after {
+    content: "";
+    display: block;
+    background-color: #e67e22;
+    width: 100px;
+    height: 2px;
+    margin: 0 auto;
+    margin-top: 30px;
+}
+
+
+h3 {
+    font-size: 110%;
+    /* word-spacing: 1px; */
+    margin-bottom: 15%;
+}
+
+
+
+.box {
+    padding: 1%;
+}
+
+.box p {
+    font-size: 90%;
+    line-height: 145%;
+}
+
 
 .hero-text-box {
     position: absolute;
@@ -49,6 +97,29 @@ h1 {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+/* ------------------------------------ */
+/* icons */
+/* ------------------------------------ */
+
+.icon-big {
+    font-size: 250%;
+    display: block;
+    color: #e67e22;
+    margin-bottom: 10px;
+    }
+
+
+/* ------------------------------------ */
+/* paragrah */
+/* ------------------------------------ */
+
+.long-copy {
+    line-height: 145%;
+    width: 70%;
+    margin-left: 15%;
+}
+
 
 /* ------------------------------------ */
 /* buttons */
@@ -121,4 +192,3 @@ h1 {
 .main-nav li a:hover {
     border-bottom: 2px solid #e67e22;
 }
-
